<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_favorite">Favorite</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_viewed">Viewed</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_add">Add</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="error_ref_entry">Content must be a HTTP Reference</string>
    <string name="post_editMessage">Edit Message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
</resources>