<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".activity.PostCardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/post_avatar_size"
                android:layout_height="@dimen/post_avatar_size"
                android:layout_marginBottom="@dimen/common_spacing"
                android:contentDescription="@string/avatar_description"
                app:layout_constraintBottom_toBottomOf="@id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_netology_48dp"
                tools:srcCompat="@sample/posts.json/data/authorAvatar" />

            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:ellipsize="end"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/published"
                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@sample/posts.json/data/author" />

            <TextView
                android:id="@+id/published"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:layout_marginBottom="@dimen/common_spacing"
                app:layout_constraintBottom_toBottomOf="@id/barrier"
                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toBottomOf="@id/author"
                tools:text="@sample/posts.json/data/published" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacing"
                android:background="@android:color/transparent"
                android:contentDescription="@string/description_post_menu"
                app:icon="@drawable/ic_options_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="avatar,published,menu" />

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.5"
                android:paddingBottom="@dimen/common_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                tools:text="@sample/posts.json/data/content" />

            <View
                android:id="@+id/video_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/video"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/barrier2"
                app:layout_constraintTop_toBottomOf="@id/content"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="video_banner" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favorite"
                style="@style/Widget.AppTheme.LikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/description_favorite"
                app:icon="@drawable/ic_like_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier2"
                tools:checked="@sample/posts.json/data/likedByMe"
                tools:text="@sample/posts.json/data/likes" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:contentDescription="@string/description_post_share"
                app:icon="@drawable/ic_share_24dp"
                app:layout_constraintStart_toEndOf="@+id/favorite"
                app:layout_constraintTop_toBottomOf="@id/barrier2"
                tools:text="139" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/visibility"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:contentDescription="@string/description_post_viewed"
                app:icon="@drawable/ic_visibility_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier2"
                tools:text="12,4K" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>